--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="me.chen_wei.uidemo">
 
     <application
+            android:name=".MyApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -14,6 +15,24 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity
+                android:theme="@style/AppTheme.NoActionBar"
+                android:name=".coordinator.CoordinatorLayoutActivity"
+                android:parentActivityName=".MainActivity"
+                >
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".MainActivity"/>
+        </activity>
+        <activity
+                android:theme="@style/AppTheme.NoActionBar"
+                android:name=".scroll.MultiScrollActivity"
+                android:parentActivityName=".MainActivity"
+                >
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".MainActivity"/>
         </activity>
     </application>
 
