--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.android.support:design:25.0.0'
     compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.romandanylyk:pageindicatorview:0.0.7'
 }
